Done User part, continue on admin order and add staff

--- a/OnovaStore/Views/AccountSetting/ChangePassword.cshtml
+++ b/OnovaStore/Views/AccountSetting/ChangePassword.cshtml
@@ -1,4 +1,98 @@
-﻿@{
+﻿@using OnovaStore.Models.Account
+@model OnovaStore.Models.Account.ChangePasswordViewModel
+@inject System.Security.Claims.IClaimPrincipalManager claimManager
+@{
     Layout = "_Layout";
+    ViewBag.Title = "Change Password";
 }
 
+<div class="container g-pt-70 g-pb-30">
+    <div class="row">
+        <!-- Profile Settings -->
+        <div class="col-lg-3 g-mb-50">
+            <aside class="g-brd-around g-brd-gray-light-v4 rounded g-px-20 g-py-30">
+                <!-- Profile Picture -->
+                <div class="text-center g-pos-rel g-mb-30">
+                    <span class="d-block g-font-weight-500">@claimManager.GivenName</span>
+                    <span class="u-icon-v3 u-icon-size--xs g-color-white--hover g-bg-primary--hover rounded-circle g-pos-abs g-top-0 g-right-15 g-cursor-pointer"
+                          data-toggle="tooltip"
+                          data-placement="top">
+                        <i class="icon-finance-067 u-line-icon-pro"></i>
+                    </span>
+                </div>
+                <!-- End Profile Picture -->
+
+                <hr class="g-brd-gray-light-v4 g-my-30">
+
+                <!-- Profile Settings List -->
+                <ul class="list-unstyled mb-0">
+                    <li class="g-pt-3">
+                        <a class="d-block align-middle u-link-v5 g-color-text g-color-primary--hover g-bg-gray-light-v5--hover rounded g-pa-3" href="@Url.Action("UserInformation", "AccountSetting")">
+                            <span class="u-icon-v1 g-color-gray-dark-v5 mr-2"><i class="icon-hotel-restaurant-002 u-line-icon-pro"></i></span>
+                            User Settings
+                        </a>
+                    </li>
+                    <li class="g-py-3">
+                        <a class="d-block align-middle u-link-v5 g-color-text g-color-primary--hover g-bg-gray-light-v5--hover rounded g-pa-3" href="@Url.Action("Order", "AccountSetting")">
+                            <span class="u-icon-v1 g-color-gray-dark-v5 mr-2"><i class="icon-finance-114 u-line-icon-pro"></i></span>
+                            Your Orders
+                        </a>
+                    </li>
+                    <li class="g-py-3">
+                        <a class="d-block align-middle u-link-v5 g-color-text g-color-primary--hover g-bg-gray-light-v5--hover rounded g-pa-3 active g-color-primary--parent-active g-bg-gray-light-v5--active" href="@Url.Action("ChangePassword", "AccountSetting")">
+                            <span class="u-icon-v1 g-color-gray-dark-v5 mr-2"><i class="icon-finance-135 u-line-icon-pro"></i></span>
+                            Change Password
+                        </a>
+                    </li>
+                </ul>
+                <!-- End Profile Settings List -->
+            </aside>
+        </div>
+        <!-- End Profile Settings -->
+        <!-- Login & Security -->
+        <div class="col-lg-9 g-mb-50">
+            <!-- Info -->
+            <div class="g-brd-around g-brd-gray-light-v4 rounded g-pa-30 g-mb-30">
+                <div class="row">
+                    <div class="col-12">
+                        <form asp-action="ChangePassword" method="post" class="g-brd-around g-brd-gray-light-v4 g-pa-30 g-mb-30">
+                            <div class="form-group has-danger g-mb-20">
+                                <label class="g-mb-10" for="currentPassword">Current Password</label>
+                                <input id="currentPassword" asp-for="CurrentPassword" class="form-control form-control-md rounded-0" type="password" placeholder="Enter your current password">
+                                <span asp-validation-for="CurrentPassword" class="form-control-feedback"></span>
+                            </div>
+
+                            <div class="form-group has-danger g-mb-20">
+                                <label class="g-mb-10" for="newPassword">New Password</label>
+                                <input id="newPassword" asp-for="NewPassword" class="form-control form-control-md rounded-0" type="password" placeholder="Enter your new password">
+                                <span asp-validation-for="NewPassword" class="form-control-feedback"></span>
+                            </div>
+
+                            <div class="form-group has-danger g-mb-20">
+                                <label class="g-mb-10" for="confirmNewPassword">New Password Confirmation</label>
+                                <input id="confirmNewPassword" asp-for="ConfirmNewPassword" class="form-control form-control-md rounded-0" type="password" placeholder="Re-Enter your new password">
+                                <span asp-validation-for="ConfirmNewPassword" class="form-control-feedback"></span>
+                            </div>
+                            <div class="form-group has-danger text-center">@Html.ValidationMessage("ChangePasswordFailed", new { @class = "form-control-feedback" })</div>
+                            <div class="form-group has-success text-center">@Html.ValidationMessage("ChangePasswordSuccess", new { @class = "form-control-feedback" })</div>
+                            <button class="btn u-btn-primary g-font-size-12 text-uppercase g-py-12 g-px-25" type="submit">Change Password</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- End Info -->
+
+
+        </div>
+        <!-- End Login & Security -->
+    </div>
+</div>
+
+@section Styles
+{
+<style type="text/css">
+    ul {
+        list-style-type: none;
+    }
+</style>
+}
