--- a/OnovaStore/Views/Shared/_LoginPartial.cshtml
+++ b/OnovaStore/Views/Shared/_LoginPartial.cshtml
@@ -29,7 +29,7 @@
 @*                </a>*@
 @*            </li>*@
             <li>
-                <a class="d-block g-color-text g-color-primary--hover g-text-underline--none--hover g-font-weight-400 g-py-5 g-px-20" href="#">
+                <a class="d-block g-color-text g-color-primary--hover g-text-underline--none--hover g-font-weight-400 g-py-5 g-px-20" href="@Url.Action("UserInformation", "AccountSetting")">
                     Account Settings
                 </a>
             </li>
