--- a/OnovaStore/Views/AccountSetting/Order.cshtml
+++ b/OnovaStore/Views/AccountSetting/Order.cshtml
@@ -1,4 +1,149 @@
-﻿
+﻿@model dynamic
 @{
-    Layout = null;
+    Layout = "_Layout";
+    ViewBag.Title = "Orders";
+    var imgUrl = "http://res.cloudinary.com/vinhloc1996/image/upload/";
 }
+
+<div class="container g-pt-70 g-pb-30">
+<div class="row">
+<!-- Profile Settings -->
+<div class="col-lg-3 g-mb-50">
+    <aside class="g-brd-around g-brd-gray-light-v4 rounded g-px-20 g-py-30">
+        <!-- Profile Picture -->
+        <div class="text-center g-pos-rel g-mb-30">
+            <span class="d-block g-font-weight-500">@Model.fullName</span>
+            <span class="u-icon-v3 u-icon-size--xs g-color-white--hover g-bg-primary--hover rounded-circle g-pos-abs g-top-0 g-right-15 g-cursor-pointer"
+                  data-toggle="tooltip"
+                  data-placement="top">
+                <i class="icon-finance-067 u-line-icon-pro"></i>
+            </span>
+        </div>
+        <!-- End Profile Picture -->
+
+        <hr class="g-brd-gray-light-v4 g-my-30">
+
+        <!-- Profile Settings List -->
+        <ul class="list-unstyled mb-0">
+            <li class="g-pt-3">
+                <a class="d-block align-middle u-link-v5 g-color-text g-color-primary--hover g-bg-gray-light-v5--hover rounded g-pa-3" href="@Url.Action("UserInformation", "AccountSetting")">
+                    <span class="u-icon-v1 g-color-gray-dark-v5 mr-2">
+                        <i class="icon-hotel-restaurant-002 u-line-icon-pro"></i>
+                    </span>
+                    User Settings
+                </a>
+            </li>
+            <li class="g-py-3">
+                <a class="d-block align-middle u-link-v5 g-color-text g-color-primary--hover g-bg-gray-light-v5--hover rounded g-pa-3 active g-color-primary--parent-active g-bg-gray-light-v5--active" href="@Url.Action("Order", "AccountSetting")">
+                    <span class="u-icon-v1 g-color-gray-dark-v5 mr-2">
+                        <i class="icon-finance-114 u-line-icon-pro"></i>
+                    </span>
+                    Your Orders
+                </a>
+            </li>
+            <li class="g-py-3">
+                <a class="d-block align-middle u-link-v5 g-color-text g-color-primary--hover g-bg-gray-light-v5--hover rounded g-pa-3" href="@Url.Action("ChangePassword", "AccountSetting")">
+                    <span class="u-icon-v1 g-color-gray-dark-v5 mr-2">
+                        <i class="icon-finance-135 u-line-icon-pro"></i>
+                    </span>
+                    Change Password
+                </a>
+            </li>
+        </ul>
+        <!-- End Profile Settings List -->
+    </aside>
+</div>
+<!-- End Profile Settings -->
+<div class="col-lg-9 g-mb-50">
+    <!-- Links -->
+    <ul class="list-inline g-brd-bottom--sm g-brd-gray-light-v3 mb-5">
+        <li class="list-inline-item g-pb-10 g-pr-10 g-mb-20 g-mb-0--sm">
+            <a class="g-brd-bottom g-brd-2 g-brd-primary g-color-main g-color-black g-font-weight-600 g-text-underline--none--hover g-px-10 g-pb-13" href="@Url.Action("Order", "AccountSetting")">Orders</a>
+        </li>
+    </ul>
+    <!-- End Links -->
+    <div class="mb-5">
+        <h3 class="h6 d-inline-block">@Model.numberOrders orders has been <span class="g-color-gray-dark-v4 g-font-weight-400">placed successful</span></h3>
+    </div>
+    <!-- Order Block -->
+    @foreach (var order in Model.orders)
+    {
+        <div class="g-brd-around g-brd-gray-light-v4 rounded g-mb-30">
+            <header class="g-bg-gray-light-v5 g-pa-20">
+                <div class="row">
+                    <div class="col-sm-3 col-md-2 g-mb-20 g-mb-0--sm">
+                        <h4 class="g-color-gray-dark-v4 g-font-weight-400 g-font-size-12 text-uppercase g-mb-2">Order Placed</h4>
+                        <span class="g-color-black g-font-weight-300 g-font-size-13">@order.orderDate</span>
+                    </div>
+                    <div class="col-sm-3 col-md-2 g-mb-20 g-mb-0--sm">
+                        <h4 class="g-color-gray-dark-v4 g-font-weight-400 g-font-size-12 text-uppercase g-mb-2">Total</h4>
+                        <span class="g-color-black g-font-weight-300 g-font-size-13">$@order.displayPrice</span>
+                    </div>
+                    <div class="col-sm-3 col-md-2 g-mb-20 g-mb-0--sm">
+                        <h4 class="g-color-gray-dark-v4 g-font-weight-400 g-font-size-12 text-uppercase g-mb-2">Ship to</h4>
+                        <span class="g-color-black g-font-weight-300 g-font-size-13">@order.fullName</span>
+                    </div>
+                    <div class="col-sm-3 col-md-4 ml-auto text-sm-right">
+                        <h4 class="g-color-gray-dark-v4 g-font-weight-400 g-font-size-12 g-mb-2">Order # @order.orderTrackingNumber</h4>
+                        @*                        <a class="g-font-weight-300 g-font-size-13" href="#!">Invoice</a>*@
+                    </div>
+                </div>
+            </header>
+            <!-- Order Content -->
+            <div class="g-pa-20">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="mb-4">
+                            <h3 class="h5 mb-1">@order.name</h3>
+                        </div>
+
+                        @foreach (var item in order.items)
+                        {
+                            <div class="row">
+                                <div class="col-4 col-sm-3 g-mb-30">
+                                    <img class="img-fluid" src="@(imgUrl + (item.productThumbImage == null ? "b5aamndnqugqynwxzmm6" : item.productThumbImage))" alt="Image Description">
+                                </div>
+                                <div class="col-8 col-sm-9 g-mb-30">
+                                    <h4 class="h6 g-font-weight-400">
+                                        <a href="@item.slug">@item.name</a>
+                                    </h4>
+                                    <span class="d-block g-color-lightred mb-2">$@item.displayPrice</span>
+                                    <a class="btn g-brd-around g-brd-gray-light-v3 g-color-gray-dark-v3 g-bg-gray-light-v5 g-bg-gray-light-v4--hover g-font-size-13 rounded g-px-18 g-py-7" onclick="addToCart(@item.productId); return false;">Buy it Again</a>
+                                </div>
+                            </div>
+                        }
+
+
+                    </div>
+                </div>
+            </div>
+            <!-- End Order Content -->
+        </div>
+    }
+    <!-- End Order Block -->
+    <!-- Pagination -->
+@*    <nav class="g-mt-100" aria-label="Page Navigation">*@
+@*        <ul class="list-inline mb-0">*@
+@*            <li class="list-inline-item hidden-down">*@
+@*                <a class="active u-pagination-v1__item g-width-30 g-height-30 g-brd-gray-light-v3 g-brd-primary--active g-color-white g-bg-primary--active g-font-size-12 rounded-circle g-pa-5" href="#!">1</a>*@
+@*            </li>*@
+@*            <li class="list-inline-item hidden-down">*@
+@*                <a class="u-pagination-v1__item g-width-30 g-height-30 g-color-gray-dark-v5 g-color-primary--hover g-font-size-12 rounded-circle g-pa-5" href="#!">2</a>*@
+@*            </li>*@
+@*            <li class="list-inline-item">*@
+@*                <a class="u-pagination-v1__item g-width-30 g-height-30 g-brd-gray-light-v3 g-brd-primary--hover g-color-gray-dark-v5 g-color-primary--hover g-font-size-12 rounded-circle g-pa-5 g-ml-15" href="#!" aria-label="Next">*@
+@*                    <span aria-hidden="true">*@
+@*                        <i class="fa fa-angle-right"></i>*@
+@*                    </span>*@
+@*                    <span class="sr-only">Next</span>*@
+@*                </a>*@
+@*            </li>*@
+@*            <li class="list-inline-item float-right">*@
+@*                <span class="u-pagination-v1__item-info g-color-gray-dark-v4 g-font-size-12 g-pa-5">Page 1 of 2</span>*@
+@*            </li>*@
+@*        </ul>*@
+@*    </nav>*@
+    <!-- End Pagination -->
+</div>
+</div>
+</div>
