--- a/OnovaStore/Views/AccountSetting/UserInformation.cshtml
+++ b/OnovaStore/Views/AccountSetting/UserInformation.cshtml
@@ -1,6 +1,7 @@
-﻿
+﻿@model dynamic
 @{
     Layout = "_Layout";
+    ViewBag.Title = "User Setting";
 }
 
 <div class="container g-pt-70 g-pb-30">
@@ -10,13 +11,8 @@
             <aside class="g-brd-around g-brd-gray-light-v4 rounded g-px-20 g-py-30">
                 <!-- Profile Picture -->
                 <div class="text-center g-pos-rel g-mb-30">
-                    <div class="g-width-100 g-height-100 mx-auto mb-3">
-                        <img class="img-fluid rounded-circle" src="assets/img-temp/100x100/img1.jpg" alt="Image Decor">
-                    </div>
-
-                    <span class="d-block g-font-weight-500">James Collins</span>
-
-                    <span class="u-icon-v3 u-icon-size--xs g-color-white--hover g-bg-primary--hover rounded-circle g-pos-abs g-top-0 g-right-15 g-cursor-pointer" title="Change Profile Picture"
+                    <span class="d-block g-font-weight-500">@Model.fullName</span>
+                    <span class="u-icon-v3 u-icon-size--xs g-color-white--hover g-bg-primary--hover rounded-circle g-pos-abs g-top-0 g-right-15 g-cursor-pointer" 
                           data-toggle="tooltip"
                           data-placement="top">
                         <i class="icon-finance-067 u-line-icon-pro"></i>
@@ -28,22 +24,22 @@
 
                 <!-- Profile Settings List -->
                 <ul class="list-unstyled mb-0">
+                    <li class="g-pt-3">
+                        <a class="d-block align-middle u-link-v5 g-color-text g-color-primary--hover g-bg-gray-light-v5--hover rounded g-pa-3 active g-color-primary--parent-active g-bg-gray-light-v5--active" href="@Url.Action("UserInformation", "AccountSetting")">
+                            <span class="u-icon-v1 g-color-gray-dark-v5 mr-2"><i class="icon-hotel-restaurant-002 u-line-icon-pro"></i></span>
+                            User Settings
+                        </a>
+                    </li>
                     <li class="g-py-3">
-                        <a class="d-block align-middle u-link-v5 g-color-text g-color-primary--hover g-bg-gray-light-v5--hover rounded g-pa-3" href="page-orders-1.html">
+                        <a class="d-block align-middle u-link-v5 g-color-text g-color-primary--hover g-bg-gray-light-v5--hover rounded g-pa-3" href="@Url.Action("Order", "AccountSetting")">
                             <span class="u-icon-v1 g-color-gray-dark-v5 mr-2"><i class="icon-finance-114 u-line-icon-pro"></i></span>
                             Your Orders
                         </a>
                     </li>
                     <li class="g-py-3">
-                        <a class="d-block align-middle active u-link-v5 g-color-text g-color-primary--hover g-bg-gray-light-v5--hover g-color-primary--parent-active g-bg-gray-light-v5--active rounded g-pa-3" href="page-login-security-1.html">
+                        <a class="d-block align-middle u-link-v5 g-color-text g-color-primary--hover g-bg-gray-light-v5--hover rounded g-pa-3" href="@Url.Action("ChangePassword", "AccountSetting")">
                             <span class="u-icon-v1 g-color-gray-dark-v5 mr-2"><i class="icon-finance-135 u-line-icon-pro"></i></span>
                             Change Password
-                        </a>
-                    </li>
-                    <li class="g-pt-3">
-                        <a class="d-block align-middle u-link-v5 g-color-text g-color-primary--hover g-bg-gray-light-v5--hover rounded g-pa-3" href="page-notifications-1.html">
-                            <span class="u-icon-v1 g-color-gray-dark-v5 mr-2"><i class="icon-education-033 u-line-icon-pro"></i></span>
-                            Notifications
                         </a>
                     </li>
                 </ul>
@@ -51,91 +47,93 @@
             </aside>
         </div>
         <!-- End Profile Settings -->
-
         <!-- Login & Security -->
         <div class="col-lg-9 g-mb-50">
             <!-- Info -->
             <div class="g-brd-around g-brd-gray-light-v4 rounded g-pa-30 g-mb-30">
                 <div class="row">
-                    <div class="col-8">
-                        <span class="d-block g-color-text g-font-size-13 mb-1">Name:</span>
-                        <span class="d-block">James</span>
-                    </div>
+                    <div class="col-12">
+                        <form asp-action="UserInformation" method="post" class="g-brd-around g-brd-gray-light-v4 g-pa-30 g-mb-30">
+                            <div class="form-group g-mb-20">
+                                <label class="g-mb-10" for="Email">Email</label>
+                                <input id="Email" disabled class="form-control form-control-md rounded-0" value="@Model.email" type="email" placeholder="Enter email">
+                            </div>
 
-                    <div class="col-4 text-right">
-                        <a class="btn g-brd-around g-brd-gray-light-v3 g-color-gray-dark-v3 g-bg-gray-light-v5 g-bg-gray-light-v4--hover g-font-size-13 rounded g-px-18 g-py-7" href="#!">Edit</a>
-                    </div>
-                </div>
+                            <h4 class="h6 g-font-weight-700 g-mb-20">Gender</h4>
+                            <div class="g-mb-15">
+                                <label class="form-check-inline u-check g-pl-25 ml-0 g-mr-25">
+                                    <input class="g-hidden-xs-up g-pos-abs g-top-0 g-left-0" value="male" name="gender" type="radio" @(Model.gender == true ? "checked" : "") />
+                                    <span class="u-check-icon-radio-v4 g-absolute-centered--y g-left-0 g-width-18 g-height-18">
+                                        <i class="g-absolute-centered d-block g-width-10 g-height-10 g-bg-primary--checked"></i>
+                                    </span>
+                                    Male
+                                </label>
 
-                <hr class="g-brd-gray-light-v4 g-my-20">
+                                <label class="form-check-inline u-check g-pl-25 ml-0 g-mr-25">
+                                    <input class="g-hidden-xs-up g-pos-abs g-top-0 g-left-0" @(Model.gender != true ? "checked" : "") value="female" name="gender" type="radio">
+                                    <span class="u-check-icon-radio-v4 g-absolute-centered--y g-left-0 g-width-18 g-height-18">
+                                        <i class="g-absolute-centered d-block g-width-10 g-height-10 g-bg-primary--checked"></i>
+                                    </span>
+                                    Female
+                                </label>
+                            </div>
 
-                <div class="row">
-                    <div class="col-8">
-                        <span class="d-block g-color-text g-font-size-13 mb-1">Last Name:</span>
-                        <span class="d-block">Collins</span>
-                    </div>
+                            <div class="form-group g-mb-20">
+                                <label class="g-mb-10" for="FullName">Full Name</label>
+                                <input id="FullName" name="FullName" class="form-control form-control-md rounded-0" value="@Model.fullName" type="text" placeholder="Enter your name">
+                            </div>
 
-                    <div class="col-4 text-right">
-                        <a class="btn g-brd-around g-brd-gray-light-v3 g-color-gray-dark-v3 g-bg-gray-light-v5 g-bg-gray-light-v4--hover g-font-size-13 rounded g-px-18 g-py-7" href="#!">Edit</a>
-                    </div>
-                </div>
-
-                <hr class="g-brd-gray-light-v4 g-my-20">
-
-                <div class="row">
-                    <div class="col-8">
-                        <span class="d-block g-color-text g-font-size-13 mb-1">Email:</span>
-                        <span class="d-block">james@gmail.com</span>
-                    </div>
-
-                    <div class="col-4 text-right">
-                        <a class="btn g-brd-around g-brd-gray-light-v3 g-color-gray-dark-v3 g-bg-gray-light-v5 g-bg-gray-light-v4--hover g-font-size-13 rounded g-px-18 g-py-7" href="#!">Edit</a>
-                    </div>
-                </div>
-
-                <hr class="g-brd-gray-light-v4 g-my-20">
-
-                <div class="row">
-                    <div class="col-8">
-                        <span class="d-block g-color-text g-font-size-13 mb-1">Mobile Phone Number:</span>
-                        <span class="d-block">+(01) 222 333 444</span>
-                    </div>
-
-                    <div class="col-4 text-right">
-                        <a class="btn g-brd-around g-brd-gray-light-v3 g-color-gray-dark-v3 g-bg-gray-light-v5 g-bg-gray-light-v4--hover g-font-size-13 rounded g-px-18 g-py-7" href="#!">Edit</a>
-                    </div>
-                </div>
-
-                <hr class="g-brd-gray-light-v4 g-my-20">
-
-                <div class="row">
-                    <div class="col-8">
-                        <span class="d-block g-color-text g-font-size-13 mb-1">Password:</span>
-                        <span class="d-block">*******</span>
-                    </div>
-
-                    <div class="col-4 text-right">
-                        <a class="btn g-brd-around g-brd-gray-light-v3 g-color-gray-dark-v3 g-bg-gray-light-v5 g-bg-gray-light-v4--hover g-font-size-13 rounded g-px-18 g-py-7" href="#!">Edit</a>
-                    </div>
-                </div>
-
-                <hr class="g-brd-gray-light-v4 g-my-20">
-
-                <div class="row">
-                    <div class="col-8">
-                        <span class="d-block g-color-text g-font-size-13 mb-1">Advanced Security Settings:</span>
-                        <span class="d-block">Manage how and when you receive security codes</span>
-                    </div>
-
-                    <div class="col-4 text-right">
-                        <a class="btn g-brd-around g-brd-gray-light-v3 g-color-gray-dark-v3 g-bg-gray-light-v5 g-bg-gray-light-v4--hover g-font-size-13 rounded g-px-18 g-py-7" href="#!">Edit</a>
+                            <div class="form-group g-mb-20">
+                                <label class="g-mb-10">Date of Birth</label>
+                                <div class="input-group g-brd-primary--focus">
+                                    <input id="DOB" name="DOB" value="@Model.dob.ToString("dd.MM.yyyy")" class="form-control form-control-md u-datepicker-v1 g-brd-right-none rounded-0" type="text" placeholder="Enter your birthdate">
+                                    <div class="input-group-addon d-flex align-items-center g-bg-white g-color-gray-dark-v5 rounded-0">
+                                        <i class="icon-calendar"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="btn u-btn-primary g-font-size-12 text-uppercase g-py-12 g-px-25" type="submit">Update</button>
+                        </form>
                     </div>
                 </div>
             </div>
             <!-- End Info -->
 
-            <button class="btn u-btn-primary g-font-size-12 text-uppercase g-py-12 g-px-25" type="submit">Update</button>
+            
         </div>
         <!-- End Login & Security -->
     </div>
 </div>
+
+@section Styles{
+    <link rel="stylesheet" href="~/html/assets/vendor/jquery-ui/themes/base/jquery-ui.min.css">
+}
+
+@section Scripts
+{
+    <!-- jQuery UI Core -->
+    <script  src="~/html/assets/vendor/jquery-ui/ui/widget.js"></script>
+    <script  src="~/html/assets/vendor/jquery-ui/ui/version.js"></script>
+    <script  src="~/html/assets/vendor/jquery-ui/ui/keycode.js"></script>
+    <script  src="~/html/assets/vendor/jquery-ui/ui/position.js"></script>
+    <script  src="~/html/assets/vendor/jquery-ui/ui/unique-id.js"></script>
+    <script  src="~/html/assets/vendor/jquery-ui/ui/safe-active-element.js"></script>
+
+    <!-- jQuery UI Helpers -->
+    <script  src="~/html/assets/vendor/jquery-ui/ui/widgets/menu.js"></script>
+    <script  src="~/html/assets/vendor/jquery-ui/ui/widgets/mouse.js"></script>
+
+    <!-- jQuery UI Widgets -->
+    <script  src="~/html/assets/vendor/jquery-ui/ui/widgets/datepicker.js"></script>
+
+    <!-- JS Unify -->
+    <script  src="~/html/assets/js/components/hs.datepicker.js"></script>
+
+    <!-- JS Plugins Init. -->
+    <script >
+        $(document).on('ready', function () {
+            // initialization of forms
+            $.HSCore.components.HSDatepicker.init('#DOB');
+        });
+    </script>
+}
