Done on customer side, continue on order list in product manager, add and list staff, statistic in admin side

--- a/OnovaStore/Views/Category/List.cshtml
+++ b/OnovaStore/Views/Category/List.cshtml
@@ -44,16 +44,21 @@
                     <!-- Product -->
                     <figure class="g-pos-rel g-mb-20">
                         <img class="img-fluid" src="@(imgUrl + (product.productThumbImage ?? "b5aamndnqugqynwxzmm6"))" alt="Image Description">
-                        @if (product.statusCode == "OpenReserve")
+                        @if (product.statusCode == "Available")
                         {
                             <figcaption class="w-100 g-bg-primary g-bg-black--hover text-center g-pos-abs g-bottom-0 g-transition-0_2 g-py-5">
-                                <a class="g-color-white g-font-size-11 text-uppercase g-letter-spacing-1 g-text-underline--none--hover" href="#!">Open Reserve</a>
+                                <a class="g-color-white g-font-size-11 text-uppercase g-letter-spacing-1 g-text-underline--none--hover" href="#!">Available</a>
                             </figcaption>
                         }
-                        else if (product.statusCode == "SoldOut" || product.statusCode == "StopSelling")
+                        else if (product.statusCode == "SoldOut")
                         {
                             <figcaption class="w-100 g-bg-primary g-bg-black--hover text-center g-pos-abs g-bottom-0 g-transition-0_2 g-py-5">
                                 <a class="g-color-white g-font-size-11 text-uppercase g-letter-spacing-1 g-text-underline--none--hover" href="#!">Sold Out</a>
+                            </figcaption>
+                        }else if (product.statusCode == "StopSelling")
+                        {
+                            <figcaption class="w-100 g-bg-primary g-bg-black--hover text-center g-pos-abs g-bottom-0 g-transition-0_2 g-py-5">
+                                <a class="g-color-white g-font-size-11 text-uppercase g-letter-spacing-1 g-text-underline--none--hover" href="#!">Stop Selling</a>
                             </figcaption>
                         }
                     </figure>
